Allowing the Scales List to be translated

--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -2,5 +2,6 @@
     "Triad Major": "Tierce Majeure",
     "Scales": "Gammes",
     "List": "Liste",
-    "Favorites": "Favoris"
+    "Favorites": "Favoris",
+    "Filters": "Filtres"
 }
