--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -3,5 +3,7 @@
     "Scales": "Gammes",
     "List": "Liste",
     "Favorites": "Favoris",
-    "Filters": "Filtres"
+    "Filters": "Filtres",
+    "Settings": "Configuration",
+    "Language": "Langue"
 }
