--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -5,5 +5,6 @@
     "Favorites": "Favoris",
     "Filters": "Filtres",
     "Settings": "Configuration",
-    "Language": "Langue"
+    "Language": "Langue",
+    "French Notation (DO, RE, MI, ...)": "Notation française (DO, RE, ...)"
 }
