Translating the menu

--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -6,5 +6,6 @@
     "Filters": "Filtres",
     "Settings": "Configuration",
     "Language": "Langue",
-    "French Notation (DO, RE, MI, ...)": "Notation française (DO, RE, ...)"
+    "French Notation (DO, RE, MI, ...)": "Notation française (DO, RE, ...)",
+    "Chords": "Accords"
 }
