--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -15,5 +15,7 @@
     "Minor Pentatonic": "Pentatonique Mineure",
     "Scales List": "Liste des gammes",
     "All": "Tous",
-    "Notes List": "Liste des notes"
+    "Notes List": "Liste des notes",
+    "No favorites": "Aucun favori",
+    "Notes you mark as favorite will show up here": "Les notes que vous marquerez comme favoris seront affichées ici"
 }
