--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -17,5 +17,6 @@
     "All": "Tous",
     "Notes List": "Liste des notes",
     "No favorites": "Aucun favori",
-    "Notes you mark as favorite will show up here": "Les notes que vous marquerez comme favoris seront affichées ici"
+    "Notes you mark as favorite will show up here": "Les notes que vous marquerez comme favoris seront affichées ici",
+    "Details": "Détail"
 }
