--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -18,5 +18,9 @@
     "Notes List": "Liste des notes",
     "No favorites": "Aucun favori",
     "Notes you mark as favorite will show up here": "Les notes que vous marquerez comme favoris seront affichées ici",
-    "Details": "Détail"
+    "Details": "Détail",
+    "clef prefix": "Clef de ",
+    "clef suffix": "",
+    "Add": "Ajouter",
+    "Remove": "Enlever"
 }
