--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -22,5 +22,9 @@
     "clef prefix": "Clef de ",
     "clef suffix": "",
     "Add": "Ajouter",
-    "Remove": "Enlever"
+    "Remove": "Enlever",
+    "What is this note?": "Quelle est cette note?",
+    "See the result": "Voir le résultat",
+    "Results": "Résultats",
+    "on": "sur"
 }
