Removing the note/position

--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -45,5 +45,6 @@
     "Give up": "Abandonner",
     "Show strings": "Voir les cordes",
     "Show notes": "Voir les notes",
-    "Show scale": "Voir la gamme"
+    "Show scale": "Voir la gamme",
+    "Scale": "Gamme"
 }
